# home_lab_manager

./: README.md
be/: .envrc  README.md  dummy.py  pyproject.toml
fe/: package-lock.json
fe/src/: App.js  config.js
fe/src/components/: ServiceImageButton.css  ServiceImageButton.js  ServiceImageButtonFactory.js
