[project]
name = "homelab-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "Matthew Hellmer",email = "theprankmonkey@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "python-on-whales (>=0.77.0,<0.78.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "human-readable (>=2.0.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
black = "^25.1.0"
httpie = "^3.2.4"

